# Crimson-Quant-System-Stock-ML

./: .env  .env.example  .gitignore  .mailmap  AAPL_2018-01-01_2025-12-31.csv  AGENTS.md  AMZN_2018-01-01_2025-12-31.csv  DEVLOG.md  README.md  build_sentiment_daily.py  build_sentiment_daily_api.py  build_sentiment_daily_newsapi.py  config.json  config.py  data_loader.py  environment.yml  features.py  fetch_news.py  generate_readme_figures.py  main.py  metrics.py  model.py  predicate.py  predict.py  predict_from_csv.py  prediction_validation.py  pyproject.toml  requirements.txt  stock_data_fetcher.py  torch_main.py  train.py
Stock-Prediction-based-on-LSTM-and-Sentiment-Analysis-main/: AAPL_2018-01-01_2025-12-31.csv  AMZN_2018-01-01_2025-12-31.csv  Report_DAPS_23-24_SN23202440.docx  build_sentiment_daily.py  predict_from_csv.py  torch_main.py
checkpoints/: AAPL_with_sentiment_best.pt  AMZN_no_sentiment_best.pt  AMZN_with_sentiment_best.pt  MSFT_no_sentiment_best.pt  MSFT_with_sentiment_best.pt
code/: data_acquire.py  model.py
crimson_quant/: __init__.py  config.json  config.py  data_loader.py  features.py  fetch_news.py  metrics.py  model.py  plotting.py  sentiment_evaluation.py
data/: AAPL_20260208T0000_20260307T2359_alphavantage_news.csv  AAPL_News_AlphaVantage_20221102_20221202.csv  AAPL_News_AlphaVantage_20221102_20230630.csv  AMZN_News_raw_20230101_20250630.csv  AMZN_News_raw_20250701_20251001.csv  AMZN_OHLCV_2023-01-01_2025-06-30.csv  AMZN_OHLCV_2023-01-01_2025-10-01.csv  aapl_News_NYTimes_original.csv  prediction_sentiment_AMZN_2025-07-01_2025-10-01.csv  (+2 more)
(+45 files in other folders)
